JSAI/error/src/test/resources/base/builtins_string-indexing.js
var x = "foobar"[3]; //should be "b"
print(x)
x

